# highs.ts

./: .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  README.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  pr.yml
scripts/: build-deps
src/: exports.cc  index.ts  solver.cc  solver.h  util.h
test/: index.test.ts
